Fix alignment

--- a/challenge/style.css
+++ b/challenge/style.css
@@ -161,6 +161,7 @@ body {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+  justify-content: space-between;
 }
 
 .colors {
